--- a/src/examples/example.yml
+++ b/src/examples/example.yml
@@ -1,5 +1,5 @@
 description: >
-  Sample example description.
+  Sample example description.long lomgjhbjdsljnajnclnlkjnjbhjbhjb hgb
 # Provide a use-case based example for using this orb.
 # Everything in the `usage` section will be displayed in the orb registry.
 # Comments are not retained.
