--- a/src/jobs/hello.yml
+++ b/src/jobs/hello.yml
@@ -1,5 +1,5 @@
 description: >
-  Sample description
+  Sample description even longer descripyionhbfjhjhvjhzjnjh
 # What will this job do?
 
 executor: default
